--- a/styles/style.css
+++ b/styles/style.css
@@ -8,18 +8,27 @@
     --secondary-color: #131318;
     --pf-weight: 900;
     --sf-weight: 700;
+    --pfsize: 55px;
 }
 
 .btn-primary{
     background-color: #FF5400;
-    border-radius: 10px;
+    border-radius: 8px;
     color: white;
-    padding: 10px 20px;
+    padding: 20px 20px;
+    border: 0;
+    font-weight: 700;
+}
+
+.clr{
+    color: var(--primary-color);
+    font-weight: var(--pf-weight);
 }
 
 *{
     margin: 0;
     box-sizing: border-box;
+    font-family: 'Mulish', sans-serif;
 }
 
 body{
@@ -54,6 +63,7 @@ body{
 .links ul{
     display: flex;
     list-style-type: none;
+    font-weight: var(--pf-weight);
 }
 
 .links .clr{
@@ -70,9 +80,164 @@ body{
     font-weight: var(--secondary-font-weight);
 }
 
-
-
 .bars{
     display: none;
 }
 
+/* header section styling done */
+
+/* banner section styling starts */
+
+.banner{
+    background-image:linear-gradient(180deg, #5f5f5fc0 0%, rgba(85, 85, 85, 0.363) 100%), url('../Images/banner.png');
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    background-repeat: no-repeat;
+    height: 500px;
+    width: 100%;
+    border-radius: 10px;
+    margin-bottom: 50px;
+}
+
+.banner_contents h1{
+    font-size: 55px;
+    color: white;
+    font-weight: var(--pf-weight);
+    margin-bottom: 30px;
+}
+
+.banner_contents p{
+    color: white;
+    width: 50%;
+    margin: auto;
+    margin-bottom: 30px;
+}
+
+.inputs{
+    background-color: rgba(255, 255, 255, 0.473);
+    background-repeat: no-repeat;
+    width: fit-content;
+    margin: auto;
+    border-radius: 10px;
+    padding: 20px 0px;
+}
+
+.inputs input{
+    margin: 0 30px;
+    padding: 20px 20px;
+    border: 0;
+    border-radius: 10px;
+}
+
+select{
+    margin: 0 30px;
+    padding: 20px 20px;
+    border: 0;
+    width: 200px;
+    border-radius: 10px;
+}
+
+.inputs button{
+    margin-right: 30px;
+    cursor: pointer;
+}
+
+/* banner section styling ends */
+
+/* popular tours section starts */
+.popular{
+    display: flex;
+    justify-content: space-between;
+}
+
+.contets{
+    width: 45%;
+    margin-right: 50px;
+}
+
+.contets h1{
+    font-size: var(--pfsize);
+    margin-bottom: 20px;
+    margin-top: 0;
+}
+
+.contets p{
+    line-height: 40px;
+}
+
+.mountain img{
+    width: 100%;
+}
+
+
+
+.contets button{
+    padding: 10px 20px;
+    margin: 20px 0px;
+}
+
+/* popular tours section ends */
+
+/* choose your destination section starts here */
+.destination{
+    margin-top: 50px;
+    text-align: center;
+}
+
+.destination h1{
+    font-size: var(--pfsize);
+    text-align: center;
+}
+
+.destination p{
+    width: 50%;
+    margin:30px auto;
+
+}
+
+/* grid styling starts */
+
+
+
+.first_row{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+    margin-top: 50px;
+}
+
+.first_row img{
+    width: 100%;
+}
+
+.second_row{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 20px;
+    margin-top: 20px;
+
+}
+
+.second_row img{
+    width: 100%;
+    height: 390px;
+}
+
+.third_row{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.third_row img{
+    width: 100%;
+    height: 390px;
+
+}
+
+/* choose your destination section ends here */
