--- a/styles/style.css
+++ b/styles/style.css
@@ -252,9 +252,11 @@ select{
 }
 
 .why_us p{
-    text-align: center;
     margin-top: 20px;
     margin-bottom: 50px;
+}
+#why_text{
+    text-align: center;
 }
 
 .services{
@@ -265,7 +267,7 @@ select{
 }
 
 .hotels{
-    background-color: #fbb46321;
+    background-color: #fbb46310;
     padding: 20px;
     border-radius: 10px;
     height: fit-content;
@@ -273,7 +275,7 @@ select{
 }
 
 .service{
-    background-color: #29cdf627;
+    background-color: #29cdf613;
     border: 1px solid #29CEF6;
     border-radius: 10px;
     padding: 20px;
@@ -292,7 +294,7 @@ select{
 }
 
 .price_gurantee{
-    background-color: #e944441f;
+    background-color: rgba(146, 51, 51, 0.048);
     border: 1px solid #E94444;
     border-radius: 10px;
     padding: 20px;
@@ -315,7 +317,6 @@ img{
 /* deals and discount section styling starts here */
 .deals_discoun{
     margin: 50px 0;
-    text-align: center;
     object-fit: cover;
 }
 
@@ -330,9 +331,15 @@ img{
     background-position: center;
     background-size: cover;
     border-radius: 10px;
+    position: relative;
 }
 
 .back_1 .card_1{
+    background-color: wheat;
+    width: 60%;
+    padding: 20px;
+    border-radius: 10px;
+    margin-left: 40%;
 }
 
 .back_2{
@@ -342,6 +349,7 @@ img{
     background-position: center;
     background-size: cover;
     border-radius: 10px;
+    position: relative;
 
 }
 
@@ -356,15 +364,42 @@ img{
     background-position: center;
     background-size: cover;
     border-radius: 10px;
+    position: relative;
 }
 
-.top_bar{
+ .top_bar{
     display: flex;
-    position: absolute;
-    margin-left: 30%;
-    padding: 20px;
-    gap: 20px;
-    background-color: red;
-}
+    gap: 30px;;
+} 
 
 /* deals and discount section styling ends here */
+
+/* a simple perfect place to get lost section starts here */
+
+.perfect_place{
+    display: flex;
+    gap: 30px;
+    justify-content: space-between;
+}
+
+.perfect_contex{
+    width: 40%;
+}
+
+.perfect_contex h1{
+    font-size: var(--pfsize);
+}
+
+.perfect_contex p{
+    margin: 20px 0px;
+}
+
+.perfect_contex ul{
+    line-height: 30px;
+}
+
+.perfect_contex button{
+    padding: 10px 30px;
+    margin-top: 20px;
+}
+/* a simple perfect place to get lost section ends here */
