--- a/styles/style.css
+++ b/styles/style.css
@@ -353,10 +353,6 @@ img{
 
 }
 
-.back_2 .card_2{
-
-}
-
 .back_3{
     background-image: url('../Images/back_1.png');
     height: 500px;
@@ -403,3 +399,85 @@ img{
     margin-top: 20px;
 }
 /* a simple perfect place to get lost section ends here */
+
+/* newsletter section starts here */
+
+.newsletterr{
+    margin-top: 80px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+
+
+}
+
+hr{
+    width: 100%;
+}
+
+.newsletter_contex{
+    width: 40%; 
+    height: 420px;
+    padding: 25px;
+    border: 1px solid #FF5400;
+    border-radius: 10px;
+}
+
+.newsletter_contex h1{
+    font-weight: var(--pf-weight);
+    margin-bottom: 30px;
+}
+
+.newsletter_contex p{
+    margin: 30px 0;
+}
+
+
+.img{
+    width: 50%;
+    position: relative;
+}
+
+.save{
+    background-color: #FF5400;
+    color: white;
+    text-align: center;
+    position: absolute;
+    padding: 20px;
+    border-radius: 10px;
+    bottom: 4rem;
+    right: 0;
+    transform: rotate(-45deg);
+}
+
+.save h2{
+    font-weight: 300;
+}
+
+.save h1{
+    font-weight: var(--pf-weight);
+}
+
+.img img{
+    height: 420px;
+    width: 100%;
+}
+
+.newsletter_contex input{
+    display: flex;
+    margin: 30px 0;
+    width: 100%;
+    border: 0;
+    background-color: rgb(216, 216, 216);
+    padding: 10px 5px;
+    border-radius: 10px;
+}
+
+.newsletter_contex button{
+    width: 100%;
+    padding: 10px;
+    margin-top: 20px;
+    cursor: pointer;
+}
+/* newsletter section ends here  */
