--- a/styles/style.css
+++ b/styles/style.css
@@ -447,6 +447,58 @@ img{
 }
 /* a simple perfect place to get lost section ends here */
 
+ /* my own made section starts here  */
+
+ .team{
+    margin: 80px 0;
+ }
+
+ #team{
+    margin-bottom: 30px;
+    font-size: 35px;
+    text-align: center;
+ }
+
+ .member_images{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-content: space-around;
+    object-fit: cover;
+    gap: 10px;
+    text-align: center;
+ }
+ 
+ .badge{
+    background-color: rgba(238, 238, 238, 0.493);
+    padding: 10px;
+    border-radius: 15px;
+ }
+
+ .member_images img{
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
+ }
+
+ .pack{
+    text-align: center;
+    font-size: 40px;
+    margin-bottom: 10px;
+ }
+
+ .hurray{
+    margin-top: 50px;
+ }
+
+ .hurray img{
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+ }
+
+ /* my own made section ends here  */
+
+
 /* newsletter section starts here */
 
 .newsletterr{
