--- a/styles/style.css
+++ b/styles/style.css
@@ -177,7 +177,7 @@ select{
     width: 45%;
     margin-right: 50px;
     height: 550px;
-    overflow: hidden;
+    overflow-y: auto;
 }
 
 .contets h1{
@@ -353,7 +353,7 @@ img{
     align-items: center;
     color: rgb(0, 0, 0);
     font-weight: var(--pf-weight);
-    background-color: rgba(255, 255, 255, 0.582);
+    background-color: rgba(255, 255, 255, 0.774);
     width: 40%;
     height: 500px;
     padding: 50px;
@@ -385,11 +385,14 @@ img{
 }
 
 .top_bar p{
+    font-weight: 300;
     margin: 20px 0px;
+    color: #5A5A5D;
 }
 
 .top_bar h2{
     margin: 20px 0px;
+    color: #E94444;
 }
 
 .top_bar button{
@@ -402,8 +405,7 @@ img{
     display: flex;
     align-items: center;
     margin: 20px 0;
-    gap: 30px
-    ;
+    gap: 20px;
 } 
 
 /* deals and discount section styling ends here */
@@ -417,8 +419,8 @@ img{
 }
 
 .perfect_contex{
-    width: 40%;
-    height: 420px;
+    width: 50%;
+    height: 450px;
     overflow-y: auto;
 }
 
@@ -431,7 +433,7 @@ img{
 }
 
 .perfect_contex ul{
-    line-height: 30px;
+    line-height: 50px;
 }
 
 .perfect_contex button{
@@ -441,7 +443,7 @@ img{
 }
 
 .video img{
-    height: 420px;
+    height: 450px;
     width: 100%;
 }
 /* a simple perfect place to get lost section ends here */
