--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -26,8 +26,14 @@
         height: 700px;
     }
     .banner_contents h1{
-        font-size: 20px;
+        font-size: 25px;
         font-weight: 700;
+    }
+
+    .banner_contents p{
+        text-align: justify;
+        width: 100%;
+        padding: 10px;
     }
 
     .inputs{
@@ -59,6 +65,7 @@
 
     .contets p{
         line-height: 40px;
+        text-align: justify;
     }
 
     .contets{
@@ -82,7 +89,13 @@
     }
     .destination p{
         width: 100%;
+        text-align: justify;
     }
+
+    .mal_center{
+        font-size: 30px;
+    }
+
     .first_row{
         grid-template-columns: repeat(1,1fr);
     }
@@ -106,6 +119,9 @@
         font-size: 20px;
         font-weight: 700;
     }
+    .why_us p{
+        text-align: justify;
+    }
     .services{
         flex-direction: column;
     }
@@ -117,6 +133,9 @@
     /* deals & discount section responsiveness styling starts here */
     .d_head h1{
         font-size: 20px;
+    }
+    .d_head p{
+        text-align: justify;
     }
     .card_1{
         display: none;
@@ -130,6 +149,12 @@
     }
     .perfect_contex h1{
         font-size: 20px;
+    }
+    .perfect_contex p{
+        text-align: justify;
+    }
+    .perfect_contex ul{
+        line-height: 30px;
     }
     .perfect_contex{
         width: 100%;
