--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -161,7 +161,8 @@
         height: auto;
         overflow: hidden;
     }
-    .video img{
+    .video{
+        width: 100%;
         height: auto;
     }
 
