--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -74,6 +74,7 @@
         margin: auto;
     }
     .contets h1{
+        text-align: center;
         font-size: 20px;
         font-weight: 900;
     }
@@ -139,7 +140,7 @@
         font-weight: 900;
     }
     .d_head p{
-        text-align: justify;
+        text-align: center;
     }
     .card_1{
         display: none;
@@ -152,6 +153,7 @@
         flex-direction: column;
     }
     .perfect_contex h1{
+        text-align: center;
         font-size: 20px;
         font-weight: 900;
     }
@@ -197,8 +199,16 @@
         width: 100%;
         height: auto;
     }
+    .newsletter_contex h1{
+        text-align: center;
+    }
+        
+    .newsletter_contex p{
+        text-align: center;
+    }
     .newsletter_contex input{
         margin: 20px auto;
+        text-align: center;
     }
     .newsletter_contex button{
         margin-top: 10px;
