--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -3,6 +3,8 @@
     .tablet_hr{
         display: block;
         margin: 10px 0;
+        outline: 1px solid red;
+        border: 0;
     }
     .head{
         flex-direction: column;
@@ -16,6 +18,7 @@
     .popular{
         flex-direction: column;
         margin-bottom: 40px;
+        margin-top: 20px;
     }
     .contets{
         width: 90%;
@@ -30,7 +33,7 @@
         margin-bottom: 30px;
     }
     .destination{
-        margin-top: 30px;
+        margin: 40px 0;
     }
     .destination p{
         width: 90%;
@@ -38,14 +41,21 @@
     .second_row{
         grid-template-columns: repeat(1,1fr);
     }
+    .why_us{
+        margin: 30px 0 50px 0;
+    }
     .services{
         flex-direction: column-reverse;
+    }
+    .deals_discoun{
+        margin: 30px 0 30px 0;
     }
     .price_gurantee{
         width: 100%;
     }
     .perfect_place{
         flex-direction: column;
+        margin: 30px 0 30px 0;
     }
     .perfect_contex{
         width: 100%;
@@ -62,8 +72,14 @@
     .video{
         width: 100%;
     }
+    .team{
+        margin: 30px 0 30px 0;
+    }
     .member_images{
         grid-template-columns: repeat(2,1fr);
+    }
+    .newsletterr{
+        margin: 30px 0 30px 0;
     }
 }
 
